--- a/css/style.css
+++ b/css/style.css
@@ -4,36 +4,58 @@ body {
 
 .landing-badge {
     max-width: 154px;
-    margin-right: 1.5rem;
     margin-bottom: .5rem;
-
 }
 
+/*DESKTOP ONLY CODE*/
+
+@media screen and (min-width: 700px) {
+    .landing-badge {
+        margin-right: 1.5rem;
+    }
+}
+
+/*MOBILE ONLY CODE*/
+@media screen and (max-width: 700px) {
+
+    .nav {
+        margin-top: 1rem;
+    }
+}
 
 main {
     margin-top: 4rem;
 }
 
+.landing-video {
+    max-width: 100%;
+    width: 100%;
+    height: 60vh;
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+
+    -ms-zoom: 1.3;
+    -moz-transform: scale(1.3);
+    -moz-transform-origin: 0 0;
+    -o-transform: scale(1.3);
+    -o-transform-origin: 0 0;
+    -webkit-transform: scale(1.3);
+    -webkit-transform-origin: 0 0;
+}
 
 
-@supports (height:40vw) {
+/*MOBILE ONLY CODE*/
+@media screen and (max-width: 700px) {
 
-    .landing-video {
-        max-width: 100%;
-        height: 70vw;
+    .cover-heading {
+        font-size: 2rem;
     }
 
-
-}
-@supports not (height:40vw) {
-
-    .landing-video {
-        max-width: 100%;
-        height: 20rem;
+    .cover-heading + p {
+        display: none;
     }
-
-
 }
+
 
 .modal {
     color: #272727;
